# ttrryy

./: CMakeLists.txt  README.md  ai.cpp  ai.h  image.qrc  images.qrc  images_setting.qrc  in.cpp  login_page.pro  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  move.h  sec_player_login.cpp  sec_player_login.h  sec_player_login.ui  tic_tac_toe.cpp  tic_tac_toe.h  tic_tac_toe.ui  tic_tac_toe_ai.cpp  tic_tac_toe_ai.h  tic_tac_toe_ai.ui  tic_tac_toe_rand.cpp  tic_tac_toe_rand.h  tic_tac_toe_rand.ui  ui_mainmenu.h  ui_mainwindow.h  ui_sec_player_login.h  ui_tic_tac_toe.h  ui_tic_tac_toe_ai.h  ui_tic_tac_toe_rand.h  ui_tic_tac_toe_random.h
.github/workflows/: blank.yml  main.yml
